--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".vehicle.maps.MapsActivity">
+    tools:context=".vehicle.MapsActivity">
 
     <fragment
         android:id="@+id/map"
@@ -13,7 +13,7 @@
         android:layout_height="match_parent" />
 
     <Button
-        android:id="@+id/updateBtn"
+        android:id="@+id/confirmBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
