--- a/app/src/main/res/layout/vehicle_row_view.xml
+++ b/app/src/main/res/layout/vehicle_row_view.xml
@@ -48,7 +48,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/owner" />
 
             <TextView
-                android:id="@+id/basePrice"
+                android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
