--- a/app/src/main/res/layout/activity_vehicle_profile.xml
+++ b/app/src/main/res/layout/activity_vehicle_profile.xml
@@ -7,15 +7,6 @@
     tools:context=".vehicle.VehicleProfileActivity">
 
     <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="Price"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/capacity" />
-
-    <TextView
         android:id="@+id/vehicleModel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +34,7 @@
         android:layout_marginStart="24dp"
         android:text="Capacity"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/owner" />
+        app:layout_constraintTop_toBottomOf="@+id/type" />
 
     <TextView
         android:id="@+id/distance"
@@ -55,6 +46,15 @@
         app:layout_constraintTop_toBottomOf="@+id/price" />
 
     <TextView
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:text="Price"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/capacity" />
+
+    <TextView
         android:id="@+id/riders"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,14 +63,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/distance" />
 
-    <ImageButton
-        android:id="@+id/actionsButton"
+    <TextView
+        android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="24dp"
+        android:text="Type"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/owner" />
+
+    <ImageButton
+        android:id="@+id/actionsButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:onClick="bookLeaveRide"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/riders"
         app:srcCompat="@drawable/ic_baseline_group_add_24" />
